--- a/TanksALot/_Binary/imgui.ini
+++ b/TanksALot/_Binary/imgui.ini
@@ -653,3 +653,13 @@ Pos=1,1
 Size=316,300
 Collapsed=0
 
+[TanksALot_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
+[TanksALot_Main_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
