--- a/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
+++ b/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
@@ -111,6 +111,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="MyEntityManager.cpp" />
     <ClCompile Include="MyRigidBody.cpp" />
     <ClCompile Include="OcTree.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\imgui\imconfig.h" />
@@ -126,6 +127,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClInclude Include="MyEntityManager.h" />
     <ClInclude Include="MyRigidBody.h" />
     <ClInclude Include="OcTree.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\res\BTO.rc" />
