Delete Bullet is now a method

--- a/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
+++ b/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
@@ -103,6 +103,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="..\include\imgui\imgui_draw.cpp" />
     <ClCompile Include="AppClass.cpp" />
     <ClCompile Include="AppClassControls.cpp" />
+    <ClCompile Include="AppClassCustomMethods.cpp" />
     <ClCompile Include="AppClassGUI.cpp" />
     <ClCompile Include="AppClassMain.cpp" />
     <ClCompile Include="Bullet.cpp" />
