--- a/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj.filters
+++ b/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AppClassCustomMethods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h">
