--- a/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
+++ b/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj
@@ -108,6 +108,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="AppClassMain.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="ControllerConfiguration.cpp" />
+    <ClCompile Include="EnemyTank.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MyEntity.cpp" />
     <ClCompile Include="MyEntityManager.cpp" />
@@ -125,6 +126,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="ControllerConfiguration.h" />
     <ClInclude Include="Definitions.h" />
+    <ClInclude Include="EnemyTank.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MyEntity.h" />
     <ClInclude Include="MyEntityManager.h" />
