--- a/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj.filters
+++ b/TanksALot/TanksALot_Main/TanksALot_Main.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="AppClassCustomMethods.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyTank.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bullet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyTank.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
